--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="lightBlue">#58DFB9</color>
+    <color name="lightGreen">#A9EBD8</color>
+    <color name="HardGreen">#028761</color>
+    <color name="status">#58F4A6</color>
+    <color name="screen_elements">#7079E9B4</color>
+    <color name="red">#F10707</color>
+
+
+
 </resources>
