--- a/app/src/main/res/drawable/text_fields_bkg.xml
+++ b/app/src/main/res/drawable/text_fields_bkg.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+    <solid
+        android:color="@color/lightGreen"/>
+    <corners android:radius="@dimen/_8sdp"/>
+
+</shape>
