--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,7 +26,7 @@
                     android:text="Home"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_gravity="center"
-                    android:textColor="@color/black"
+                    android:textColor="#FFFFFF"
 
                     android:textSize="@dimen/_20ssp"
                     />
