--- a/app/src/main/res/drawable/card.xml
+++ b/app/src/main/res/drawable/card.xml
@@ -3,13 +3,13 @@
 
     <item>
         <shape>
-            <solid android:color="#E27777"/>
+            <solid android:color="@color/status"/>
             <corners android:radius="20dp"/>
         </shape>
     </item>
-    <item android:right="2dp" android:left="2dp" android:bottom="4dp">
+    <item android:right="4dp" android:left="4dp" android:bottom="6dp">
         <shape>
-            <solid android:color="#288EE0"/>
+            <solid android:color="@color/HardGreen"/>
             <corners android:radius="20dp"/>
         </shape>
     </item>
