--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -18,16 +18,16 @@
 
         <TextView
             android:id="@+id/tvHome"
-            android:layout_weight="3"
-            android:layout_width="0dp"
+
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/myfont"
             android:text="History"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_gravity="center"
-            android:textColor="@color/black"
-
-            android:textSize="@dimen/_20ssp"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="@dimen/_23ssp"
             />
 
     </LinearLayout>
