--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             >
-
                 <TextView
                     android:id="@+id/tvHome"
                     android:layout_weight="3"
@@ -28,20 +27,134 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_gravity="center"
                     android:textColor="#FFFFFF"
-
-                    android:textSize="@dimen/_20ssp"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/_23ssp"
                     />
-
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/postRecyclerView"
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/postRecyclerView"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/llHeader"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            />-->
+
+        <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/llHeader"
+            android:overScrollMode="never"
+            android:scrollbars="vertical"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/llHeader"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            >
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/mainConstraints"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+
+                        <LinearLayout
+                            android:id="@+id/linearLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/card"
+                            android:orientation="vertical"
+                            android:paddingStart="@dimen/_16sdp"
+                            android:paddingTop="0dp"
+                            android:paddingEnd="@dimen/_16sdp"
+                            android:paddingBottom="@dimen/_10sdp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="@dimen/_10sdp"
+                                    android:orientation="horizontal"
+                                    >
+
+                                        <ImageView
+                                            android:layout_width="@dimen/_40sdp"
+                                            android:layout_height="@dimen/_40sdp"
+                                            android:src="@drawable/ic_baseline_account_circle_24"
+                                            app:tint="#FFFFFF" />
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginStart="@dimen/_10sdp"
+                                            android:letterSpacing="0.05"
+                                            android:text="Elon Musk"
+                                            android:textColor="@color/white"
+                                            android:textSize="@dimen/_20ssp"
+                                            android:textStyle="bold"
+
+                                            />
+                                </LinearLayout>
+
+                                <TextView
+                                    android:id="@+id/tvText"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="@dimen/_50sdp"
+                                    android:textStyle="bold"
+                                    android:text=" 497883,C.G.,NayaRaipur,Sector 27\n near jalebi shop "
+                                    android:textColor="#F8FBFD"
+                                    android:textSize="@dimen/_11ssp" />
+
+                                <androidx.cardview.widget.CardView
+                                    android:id="@+id/description"
+                                    android:layout_height="wrap_content"
+                                    android:layout_width="wrap_content"
+                                    android:layout_marginStart="@dimen/_10sdp"
+                                    android:layout_marginEnd="@dimen/_10sdp"
+                                    android:layout_marginTop="@dimen/_8sdp"
+                                    android:layout_marginBottom="@dimen/_20sdp"
+                                    android:elevation="@dimen/_16sdp"
+                                    app:cardCornerRadius="@dimen/_10sdp"
+                                    app:cardBackgroundColor="@color/lightGreen"
+                                    >
+
+                                        <TextView
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:padding="@dimen/_5sdp"
+                                            android:text="I have a requirements of some material for home Burj Khalifa, below are the materials \n 1. Glasses \n 2. Rhodes \n 3.Cement \n 4.Some People.
+"
+                                            android:textSize="@dimen/_11sdp" />
+                                </androidx.cardview.widget.CardView>
+                        </LinearLayout>
+
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/floatingActionButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/_24sdp"
+                            android:clickable="true"
+                            android:foregroundTint="#FFF"
+                            app:tint="#FFFFFF"
+                            android:backgroundTint="@color/status"
+                            app:maxImageSize="@dimen/_25sdp"
+                            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+                            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+                            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+                            app:srcCompat="@drawable/ic_baseline_message_24"
+                            tools:ignore="OnClick" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
