--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -36,16 +36,18 @@
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:src="@drawable/ic_baseline_account_circle_24"
-                app:tint="#FFFFFF" />
+
+                app:tint="@color/HardGreen" />
 
             <TextView
+                android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:letterSpacing="0.05"
                 android:text="Elon Musk"
-                android:textColor="@color/white"
+                android:textColor="@color/HardGreen"
                 android:textSize="@dimen/_20ssp"
                 android:textStyle="bold"
 
@@ -53,12 +55,12 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvText"
+            android:id="@+id/tvAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_50sdp"
             android:text=" 497883,C.G.,NayaRaipur,Sector 27\n near jalebi shop "
-            android:textColor="#F8FBFD"
+            android:textColor="@color/HardGreen"
             android:layout_marginBottom="@dimen/_5sdp"
             android:textSize="@dimen/_11ssp"
             android:textStyle="bold" />
@@ -77,7 +79,8 @@
             >
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/tvDescription"
+                android:layout_width="@dimen/_250sdp"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_5sdp"
                 android:text="I have a requirements of some material for home Burj Khalifa, below are the materials \n 1. Glasses \n 2. Rhodes \n 3.Cement \n 4.Some People.
@@ -87,14 +90,15 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+
+        android:id="@+id/fabChat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/_24sdp"
         android:clickable="true"
         android:foregroundTint="#FFF"
         app:tint="#FFFFFF"
-        android:backgroundTint="@color/status"
+        android:backgroundTint="@color/HardGreen"
         app:maxImageSize="@dimen/_25sdp"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
