--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,6 +9,7 @@
         android:id="@+id/homeFragment"
         android:name="com.example.bottomnavigation.fragments.HomeFragment"
         android:label="fragment_home"
+
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/chatFragment"
@@ -29,5 +30,9 @@
         android:id="@+id/postFragment"
         android:name="com.example.bottomnavigation.fragments.PostFragment"
         android:label="fragment_post"
-        tools:layout="@layout/fragment_post" />
+        tools:layout="@layout/fragment_post" >
+        <action
+            android:id="@+id/action_postFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
